--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="theme-color" content="#afebcb" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue</title>
+    <title>Sammy Pay</title>
   </head>
   <body>
     <div id="app"></div>
